--- a/src/app/kanban/kanban-add/kanban-add.component.scss
+++ b/src/app/kanban/kanban-add/kanban-add.component.scss
@@ -20,20 +20,18 @@ section {
 
 .content {
     display: flex;
-    background: rgb(0, 132, 255);
     width: 100%;
     height: 92dvh;
 
     .kanban-form {
-        background: grey;
         display: flex;
         flex-direction: column;
-        width: 100%;
+        width: 50%;
         gap: 30px;
-        padding-left: 3em;
-        padding-right: 3em;
+        padding-left: 8em;
+        padding-right: 5em;
 
-        h1{
+        h1 {
             padding-top: 1.5em;
             font-size: 6em;
         }
@@ -64,25 +62,34 @@ section {
             span {
                 color: rgba(0, 0, 0, 0.746);
                 font-size: 18px;
-                padding-bottom: 0.3em;
+                margin-bottom: 0.3em;
             }
+        }
+
+        .form-label {
+            position: absolute;
+            bottom: 3.5em;
+            font-size: 1.6em;
+            margin-right: 1.5em;
         }
     }
 
     .kanban-addtask-priority {
         display: flex;
         flex-direction: column;
-        width: 100%;
 
         p {
             font-size: 18px;
-            padding: 4em;
+            padding-left: 4em;
+            padding-top: 10.5em;
+            margin-bottom: 0.4em;
         }
 
         .priority-buttons {
             display: flex;
             justify-content: space-evenly;
-            padding-bottom: 4em;
+            margin-bottom: 4em;
+            padding-right: 8em;
 
             button {
                 display: flex;
@@ -94,6 +101,10 @@ section {
                 padding: 10px 16px;
                 transition: box-shadow 0.3s ease;
 
+                img {
+                    width: 20px;
+                }
+
                 &:hover {
                     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
                 }
@@ -102,11 +113,112 @@ section {
     }
 }
 
-.form-label{
+label {
+    font-size: 1.8em;
+    margin-bottom: 0.3em;
+}
 
-    .required-asterisk {
-        color: red;
-        margin-right: 1em;
+.required-asterisk {
+    color: red;
+    margin-right: 1em;
+}
+
+.right-addtask {
+    width: 50%;
+
+    .kanban-assigned-to {
+        display: flex;
+        flex-direction: column;
+
+        .assigned-span {
+            font-size: 1.6em;
+            padding-left: 4em;
+            padding-bottom: 0.4em;
+        }
+
+        .all-user-container {
+            width: 100%;
+            padding-left: 4em;
+            padding-right: 12em;
+
+            .select-to-assign {
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+                background-color: white;
+                border: 2px rgba(0, 0, 0, 0.346) solid;
+                padding: 1em;
+                border-radius: 10px;
+                height: 48px;
+                font-size: 16px;
+
+                &:hover {
+                    border: 2px rgba(0, 0, 0, 0.694) solid;
+                }
+            }
+        }
+    }
+
+    .kanban-overlay-subtask {
+        width: 100%;
+        padding-top: 3em;
+
+        .subtask-span {
+            font-size: 16px;
+            padding-bottom: 0.4em;
+        }
+
+        .subtaskfield {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            background-color: white;
+            padding: 1em;
+            font-size: 16px;
+            height: 48px;
+            border: 2px solid rgba(0, 0, 0, 0.151);
+            border-radius: 10px;
+        }
+    }
+
+    .each-sub-task {
+        display: flex;
+        justify-content: flex-end;
+        margin-top: 10em;
+        gap: 1.5em;
+
+        .clear {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: white;
+            border: solid rgba(0, 0, 0, 0.049) 2px;
+            border-radius: 10px;
+            font-size: 1.8em;
+            padding: 8px 10px;
+            transition: box-shadow 0.3s ease;
+
+            img {
+                margin-left: 0.5em;
+            }
+        }
+
+        .create-task {
+            color: white;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: #2A3647;
+            border: solid rgba(0, 0, 0, 0.049) 2px;
+            border-radius: 10px;
+            font-size: 1.8em;
+            padding: 10px 18px;
+            transition: box-shadow 0.3s ease;
+
+            img{
+                margin-left: 0.5em;
+            }
+        }
     }
 }
 
@@ -159,6 +271,25 @@ input[type="number"] {
     appearance: textfield;
 }
 
+.createdContact {
+    z-index: 4;
+    width: 15em;
+    height: 4em;
+    position: fixed;
+    top: 80%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: none;
+    justify-content: center;
+    align-items: center;
+    font-size: 16px;
+    border-radius: 14px;
+    border: 1px solid black;
+    background-color: #2a3647;
+    color: white;
+    box-shadow: 0 4px 0 rgba(0, 0, 0, 0.15);
+    animation: fade-in-left-overlay-viewport 2s ease-in-out;
+}
 
 .display {
     display: flex;
