Update Kanban card UI and refactor board service path
Enhanced the Kanban card component with structured HTML and improved SCSS for layout and priority indicators. Adjusted Kanban board and main styles for better layout and background. Refactored board service files into a dedicated 'board' directory and made 'subTask' optional in the TaskItem interface.

--- a/src/app/kanban/kanban-board/card/card.component.html
+++ b/src/app/kanban/kanban-board/card/card.component.html
@@ -1,1 +1,11 @@
-<div class="testcontainer"></div>
+<div class="testcontainer">
+  <div class="category">USER STORY</div>
+  <div class="tite"> <h4>TASK TITLE</h4></div>
+    <div class="description"> <p> description description</p></div>
+    <div class="subtask">subtasks</div>
+    <div class="user-priority">
+      <div class="user">user</div>
+      <div class="urgent"></div>
+    </div>
+
+</div>
