--- a/src/app/kanban/kanban.component.scss
+++ b/src/app/kanban/kanban.component.scss
@@ -19,10 +19,12 @@
     height: 100%;
     width: 100%;
     padding: 0em 4em;
+    background: #f0f0f0;
 
 }
 
 app-kanban-board {
+
     width: 100%;
 }
 
