--- a/src/app/kanban/kanban-board/card/card.component.scss
+++ b/src/app/kanban/kanban-board/card/card.component.scss
@@ -1,3 +1,9 @@
+section{
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
 .testcontainer {
     padding: 18px;
     border-radius: 20px;
