--- a/src/app/kanban/kanban-edit/kanban-edit.component.html
+++ b/src/app/kanban/kanban-edit/kanban-edit.component.html
@@ -12,19 +12,19 @@
                 <form class="kanban-overlay-form">
                     <div class="form-title kanban-div">
                         <span>Title</span>
-                        <input [(ngModel)]="dummyTasks[0].title" placeholder="Enter a title" type="text" #name="ngModel" />
+                        <input [ngModel]="dummyTasks[currentIndex].title" name="taskTitle" placeholder="Enter a title" type="text">
                     </div>
                     <div class="form-description kanban-div">
                         <span>Description</span>
                         <textarea
+                            [ngModel]="dummyTasks[currentIndex].description" name="taskDescription"
                             placeholder="Enter a Description "
-                            name=""
-                            id=""
                         ></textarea>
                     </div>
                     <div class="form-date kanban-div">
                         <span>Due date</span>
-                        <input type="date" />
+                        <input type="date" [ngModel]="dummyTasks[currentIndex].dueDate" name="taskDate"
+                        />
                     </div>
                 </form>
 
@@ -32,22 +32,31 @@
                     <p>Priority</p>
                     <div class="prioity-buttons">
 
-                        <button>
+                        <button (click)="changeToUrgent()" [disabled]="dummyTasks[currentIndex].priority === 'Urgent'"  [class.active-urgent]="dummyTasks[currentIndex].priority === 'Urgent'">
                             <span>Urgent</span>
-                            <img
-                                src="assets/img/kanban-edit-overlay/urgent-arrow.svg"alt=""/>
+                            @if(dummyTasks[currentIndex].priority !== 'Urgent'){
+                                <img src="assets/img/kanban-edit-overlay/urgent-arrow.svg"alt=""/>
+                            }@else {
+                                <img src="assets/img/kanban-edit-overlay/white-urgent.svg"alt=""/>
+                            }
                         </button>
 
-                        <button>
+                        <button (click)="changeToMedium()" [disabled]="dummyTasks[currentIndex].priority === 'Medium'"   [class.active-medium]="dummyTasks[currentIndex].priority === 'Medium'">
                             <span>Medium</span>
-                            <img
-                                src="assets/img/kanban-edit-overlay/medium-arrow.svg"alt=""/>
+                            @if(dummyTasks[currentIndex].priority !== 'Medium'){
+                                <img src="assets/img/kanban-edit-overlay/medium-arrow.svg"alt=""/>
+                            }@else {
+                                <img src="assets/img/kanban-edit-overlay/white-medium.svg"alt=""/>
+                            }
                         </button>
 
-                        <button>
+                        <button (click)="changeToLow()" [disabled]="dummyTasks[currentIndex].priority === 'Low'" [class.active-low]="dummyTasks[currentIndex].priority === 'Low'">
                             <span>Low</span>
-                            <img
-                                src="assets/img/kanban-edit-overlay/low-arrow.svg" alt=""/>
+                            @if(dummyTasks[currentIndex].priority !== 'Low'){
+                                <img src="assets/img/kanban-edit-overlay/low-arrow.svg" alt=""/>
+                            }@else{
+                                <img src="assets/img/kanban-edit-overlay/white-low.svg" alt=""/>
+                            }
                         </button>
 
                     </div>
@@ -68,14 +77,28 @@
                 <div class="kanban-overlay-subtask">
                     <span>Subtask</span>
                     <div class="subtaskfield">
-                        Add new subtask
-                        <img
-                            src="assets/img/kanban-edit-overlay/plus-zichen.svg"
-                            alt=""
-                        />
+                        <input [(ngModel)]="subtaskString" type="text"(focus)="isInputFocused = true" (blur)="isInputFocused = false">
+                        @if(!isInputFocused){
+                            <div class="add">
+                                <img src="assets/img/kanban-edit-overlay/plus-zichen.svg" alt=""/>
+                            </div>
+                        }@else {
+                            <div class="submit-cancel">
+                                <button (click)="emptySubtask(); debug()">
+                                    <img  src="assets/img/kanban-edit-overlay/exit-subtask.svg" alt="">
+                                </button>
+                                
+                                <div class="grey-line"></div>
+                                <button (click)="pushToSubtask(); debug()">
+                                    <img  src="assets/img/kanban-edit-overlay/checkmark-subtask.svg" alt="">
+                                </button>
+                            </div>
+                        }
                     </div>
                     <div class="each-sub-task">
-                        <li>Contact Form</li>
+                        @for (item of dummyTasks[currentIndex].subTask; track $index) {
+                            <li>{{ dummyTasks[currentIndex].subTask[$index]}}</li>
+                        }
                     </div>
                 </div>
             </div>
