--- a/src/app/kanban/kanban-edit/kanban-edit.component.scss
+++ b/src/app/kanban/kanban-edit/kanban-edit.component.scss
@@ -39,6 +39,7 @@
             }
         }
         .testzwecken{
+            z-index: 1000;
             position: absolute;
             display: flex;
             width: 60%;
@@ -113,7 +114,19 @@
                         display: flex;
                         justify-content: space-evenly;
                         padding-bottom: 4em;
-
+                        
+                        .active-urgent{
+                            background-color: #FF3D00;
+                            color: white;
+                        }
+                        .active-medium{
+                            background-color: #ffa800;
+                            color: white;
+                        }
+                        .active-low{
+                            background-color: #7ae229;
+                            color: white;
+                        }
                         button {
                             display: flex;
                             gap: 5px;
@@ -173,11 +186,50 @@
                         display: flex;
                         align-items: center;
                         justify-content: space-between;
-                        padding: 1em;
-                        font-size: 16px;
-                        height: 48px;
                         border: 2px solid rgba(0, 0, 0, 0.151);
                         border-radius: 10px;
+                        height: 100%;
+                        width: 100%;
+                        padding: 1em;
+                        
+                        height: 48px;
+                        input{
+                            font-size: 16px;
+                            background-color: transparent;
+                        }
+                        .add,.submit-cancel{
+                            display: flex;
+                            align-items: center;
+                            position: absolute;
+                            right: 1em;
+                            cursor: pointer;
+                        }
+                        .add{
+                            z-index: -10;
+                            height: 100%;
+                            img{
+                            &:hover{
+                                background-color: rgba(0, 0, 0, 0.091);
+                                border-radius: 50px;
+                            }
+                            }
+                        }
+                        .submit-cancel{
+                            z-index: 1000;
+                            img{
+                                z-index: -10;
+                            &:hover{
+                                background-color: rgba(0, 0, 0, 0.091);
+                                border-radius: 50px;
+                            }
+                            }
+                            .grey-line{
+                                width: 2px;
+                                height: 24px;
+                                background-color: rgba(128, 128, 128, 0.41);
+                                margin: 0px 2px;
+                            }
+                        }
                     }
                 }
             }
