Add placeholder for empty task columns in Kanban board
Introduces a 'No tasks to do' placeholder in each Kanban column when there are no tasks for that status. Also adds corresponding styles for the placeholder. Additionally, updates a sample task's status in the board service to an empty string.

--- a/src/app/kanban/kanban-board/kanban-board.component.html
+++ b/src/app/kanban/kanban-board/kanban-board.component.html
@@ -17,8 +17,12 @@
         <div class="add-area">
           <h3>To do</h3> <button class="small-add-task-button">+</button>
         </div>
-        @for (task of filterTaskStatus('to do'); track $index) {
-          <app-card [task]="task"></app-card>
+          @if (filterTaskStatus('to do').length === 0) {
+            <div class="noTaskPlaceholder">No tasks to do</div>
+              } @else {
+                  @for (task of filterTaskStatus('to do'); track $index) {
+                  <app-card [task]="task"></app-card>
+          }
         }
       </div>
 
@@ -26,8 +30,12 @@
         <div class="add-area">
           <h3>In progress</h3> <button class="small-add-task-button">+</button>
         </div>
-        @for (task of filterTaskStatus('in progress'); track $index) {
-          <app-card [task]="task"></app-card>
+        @if (filterTaskStatus('in progress').length === 0) {
+          <div class="noTaskPlaceholder">No tasks to do</div>
+            } @else {
+                @for (task of filterTaskStatus('in progress'); track $index) {
+                  <app-card [task]="task"></app-card>
+          }
         }
       </div>
 
@@ -35,19 +43,28 @@
         <div class="add-area">
           <h3>Await feedback</h3> <button class="small-add-task-button">+</button>
         </div>
-        @for (task of filterTaskStatus('await feedback'); track $index) {
-          <app-card [task]="task"></app-card>
+          @if (filterTaskStatus('await feedback').length === 0) {
+            <div class="noTaskPlaceholder">No tasks to do</div>
+              } @else {
+                  @for (task of filterTaskStatus('await feedback'); track $index) {
+                    <app-card [task]="task"></app-card>
           }
+        }
       </div>
 
       <div class="task-column">
         <div class="add-area">
           <h3>Done</h3> <button class="small-add-task-button">+</button>
         </div>
-        @for (task of filterTaskStatus('done'); track $index) {
-          <app-card [task]="task"></app-card>
+          @if (filterTaskStatus('done').length === 0) {
+            <div class="noTaskPlaceholder">No tasks to do</div>
+              } @else {
+                  @for (task of filterTaskStatus('done'); track $index) {
+                    <app-card [task]="task"></app-card>
+          }
         }
       </div>
+
     </div>
   </div>
 </section>
