--- a/src/app/kanban/kanban-board/kanban-board.component.scss
+++ b/src/app/kanban/kanban-board/kanban-board.component.scss
@@ -126,6 +126,20 @@ input {
   }
 }
 
+.noTaskPlaceholder{
+  color: #b4afaf;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 48px;
+  width: 100%;
+  background-color: #e7e7e7;
+  border-radius: 15px;
+  border: dashed 1px #b4afaf;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
+
+}
+
 app-card{
     width: 100%;
 }
