--- a/src/app/kanban/kanban-board/card/card.component.scss
+++ b/src/app/kanban/kanban-board/card/card.component.scss
@@ -2,10 +2,15 @@ section {
   margin-top: 20px;
   display: flex;
   flex-direction: column;
-  gap: 20px;
 }
 
 .testcontainer {
+  cursor: pointer;
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  margin-bottom: 10px;
   padding: 18px;
   border-radius: 20px;
   width: 100%;
@@ -15,6 +20,11 @@ section {
   flex-direction: column;
   justify-content: space-around;
   box-shadow: 0 6px 0 rgba(0, 0, 0, 0.02);
+  transition: ease-in-out 0.2s;
+
+  &:hover{
+    box-shadow: 0 0 6px rgba(42, 54, 71, 0.3); 
+  }
 
 
   .category {
@@ -38,7 +48,7 @@ section {
     display: flex;
     justify-content: space-between;
 
-    .user{
+    .user {
       display: flex;
       align-items: center;
     }
@@ -71,8 +81,8 @@ section {
   }
 
   .description {
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
 }
