--- a/src/app/kanban/kanban-board/kanban-board.component.scss
+++ b/src/app/kanban/kanban-board/kanban-board.component.scss
@@ -21,7 +21,6 @@ section {
         display: flex;
         flex-direction: column;
         align-items: center;
-        gap: 20px;
         width: 252px;
         height: 100%;
         overflow-y: auto;
@@ -29,7 +28,7 @@ section {
 
         .add-area {
           top: 0px;
-
+          margin-bottom: 15px;
           position: sticky;
           display: flex;
           justify-content: space-between;
@@ -43,7 +42,6 @@ section {
           display: flex;
           flex-direction: column;
           align-items: center;
-          gap: 20px;
           width: 252px;
           height: 100%;
           overflow-y: auto;
