--- a/src/app/kanban/kanban-board/card/card.component.html
+++ b/src/app/kanban/kanban-board/card/card.component.html
@@ -1,18 +1,27 @@
 <section>
   <div class="testcontainer">
-    <div class="category">{{task.category}}</div>
+    <div class="category {{task.category?.toLocaleLowerCase()}}">{{task.category}}</div>
     <div class="tite">
       <h4>{{task.title}}</h4>
     </div>
     <div class="description">
       {{task.description}}
     </div>
+
     <div class="subtask">{{task.subTask}}</div>
-    <div class="user-priority">
-      @for (user of task.assignedTo; track $index) {
-        <div class="user">{{user.user}}</div>
-      }
-      <div [class]="task.priority.toLowerCase()"></div>
+    
+    <div class="user-content">
+      <div class="user-area">
+        @for (user of task.assignedTo; track $index) {
+        <div class="user initials">{{ user.user.slice(0, 2).toLocaleUpperCase()}}</div>
+        }
+      </div>
+
+      <div class="user-priority">
+
+        <div [class]="task.priority.toLowerCase()"></div>
+      </div>
+
     </div>
   </div>
 </section>
