--- a/src/app/kanban/kanban-board/full-card/full-card.component.html
+++ b/src/app/kanban/kanban-board/full-card/full-card.component.html
@@ -1,8 +1,11 @@
 <section>
   <div class="full-card-container">
-    <div class="category">{{task.category}}</div>
-    <div class="tite">
-      <h4>{{task.title}}</h4>
+    <div class="category-area">
+      <div class="category {{task.category?.toLocaleLowerCase()}}">{{task.category}}</div>
+      <button class="close-button" (click)="boardService.openFullCard()"></button>
+    </div>
+    <div class="title">
+      <h1>{{task.title}}</h1>
     </div>
     <div class="description">
       {{task.description}}
