--- a/src/app/kanban/kanban-board/kanban-board.component.html
+++ b/src/app/kanban/kanban-board/kanban-board.component.html
@@ -24,7 +24,7 @@
             </div>
           } @else {
               @for (task of tasksSearchAndStatus('to do', searchValue); track $index) {
-                <app-card [task]="task"></app-card>
+                <app-card [task]="task" (click)="boardService.openFullCard()"></app-card>
               }
           }
         </div>
@@ -42,7 +42,7 @@
             </div>
           } @else {
               @for (task of tasksSearchAndStatus('in progress', searchValue); track $index) {
-                <app-card [task]="task"></app-card>
+                <app-card [task]="task" (click)="boardService.openFullCard()"></app-card>
               }
           }
         </div>
@@ -60,7 +60,7 @@
             </div>
           } @else {
               @for (task of tasksSearchAndStatus('await feedback', searchValue); track $index) {
-                <app-card [task]="task"></app-card>
+                <app-card [task]="task" (click)="boardService.openFullCard()"></app-card>
               }
           }
         </div>
@@ -77,7 +77,7 @@
             </div>
           } @else {
               @for (task of tasksSearchAndStatus('done', searchValue); track $index) {
-                <app-card [task]="task"></app-card>
+                <app-card [task]="task" (click)="boardService.openFullCard()"></app-card>
               }
           }
         </div>
@@ -85,4 +85,10 @@
 
     </div>
   </div>
+  
+  @if (boardService.fullCardActive) {  
+    @for (task of tasksSearchAndStatus('done', searchValue); track $index) {
+      <app-full-card [task]="task" ></app-full-card>
+    }
+  }
 </section>
