--- a/src/app/kanban/kanban-board/kanban-board.component.scss
+++ b/src/app/kanban/kanban-board/kanban-board.component.scss
@@ -57,22 +57,6 @@ section {
             font-size: 20px;
           }
 
-          .small-add-task-button {
-            font-weight: normal;
-            font-size: 16px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            width: 24px;
-            height: 24px;
-            line-height: 1;
-            padding: 0;
-            border: 2px solid black;
-            border-radius: 6px;
-            background: none;
-            color: black;
-            cursor: pointer;
-          }
         }
       }
     }
@@ -170,4 +154,35 @@ section {
   app-card {
     width: 100%;
   }
+}
+
+app-full-card{
+      border-radius: 20px;
+
+    position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 80%;
+  max-width: 600px;
+  z-index: 1000;
+  background: white;
+  box-shadow: 0 0 20px rgba(0,0,0,0.2);
+}
+
+.small-add-task-button {
+  font-weight: normal;
+  font-size: 16px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 24px;
+  height: 24px;
+  line-height: 1;
+  padding: 0;
+  border: 2px solid black;
+  border-radius: 6px;
+  background: none;
+  color: black;
+  cursor: pointer;
 }
