Adjust user-priority alignment and layout
Changed .user-priority to use align-items: start and flex-direction: column for improved vertical alignment and layout.

--- a/src/app/kanban/kanban-board/full-card/full-card.component.scss
+++ b/src/app/kanban/kanban-board/full-card/full-card.component.scss
@@ -42,7 +42,8 @@ section {
 
     .user-priority {
         display: flex;
-        align-items: center;
+        align-items: start;
+        flex-direction: column;
 
         .user {
             display: flex;
