changed at-sign for mail address

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -3,7 +3,7 @@
     <header>
         <div class="kanban"></div>
         <div class="menu">
-            <div class="help"></div>
+            <a routerLink="/help"><div class="help"></div></a>
             <span id="user" (click)="toggleDropDown()">HA</span>
         </div>
     </header>
