--- a/src/app/shared/nav-footer/nav-footer.component.html
+++ b/src/app/shared/nav-footer/nav-footer.component.html
@@ -13,7 +13,7 @@
     </nav>
     </div>
     <footer>
-        <a href="">Privacy Policy</a>
-        <a href="">Legal notice</a>
+        <a routerLink="/privacy">Privacy Policy</a>
+        <a routerLink="/legalNotice">Legal notice</a>
     </footer>
 </section>
