--- a/src/app/shared/privacy/privacy.component.html
+++ b/src/app/shared/privacy/privacy.component.html
@@ -178,5 +178,5 @@
 <h2>Contact Us</h2>
 <p>If you have any questions about this Privacy Policy, You can contact us:</p>
 <ul>
-<li>By email: maikbennefeld@googlemail.com</li>
+<li>By email: maikbennefeld&#64;googlemail.com</li>
 </ul>
