--- a/src/app/shared/privacy/privacy.component.html
+++ b/src/app/shared/privacy/privacy.component.html
@@ -1,7 +1,14 @@
-<h1>Privacy Policy</h1>
-<p>Last updated: July 12, 2025</p>
+<div class="main-content">
+  <div class="nav-area"><app-nav-footer></app-nav-footer></div>
+  <div class="main-content-input">
+    <app-header></app-header>
+        <div>
+          <h1>Privacy Policy</h1>
+          
+<p> <i>Last updated: July 12, 2025</i> </p>
 <p>This Privacy Policy describes Our policies and procedures on the collection, use and disclosure of Your information when You use the Service and tells You about Your privacy rights and how the law protects You.</p>
 <p>We use Your Personal data to provide and improve the Service. By using the Service, You agree to the collection and use of information in accordance with this Privacy Policy. This Privacy Policy has been created with the help of the <a href="https://www.termsfeed.com/privacy-policy-generator/" target="_blank">Privacy Policy Generator</a>.</p>
+
 <h2>Interpretation and Definitions</h2>
 <h3>Interpretation</h3>
 <p>The words of which the initial letter is capitalized have meanings defined under the following conditions. The following definitions shall have the same meaning regardless of whether they appear in singular or in plural.</p>
@@ -44,7 +51,7 @@
 <li>
 <p><strong>You</strong> means the individual accessing or using the Service, or the company, or other legal entity on behalf of which such individual is accessing or using the Service, as applicable.</p>
 </li>
-</ul>
+</ul><br>
 <h2>Collecting and Using Your Personal Data</h2>
 <h3>Types of Data Collected</h3>
 <h4>Personal Data</h4>
@@ -180,3 +187,7 @@
 <ul>
 <li>By email: maikbennefeld&#64;googlemail.com</li>
 </ul>
+        </div>
+  </div>
+</div>
+<app-nav-footer-mobile></app-nav-footer-mobile>
